fixed spacing + updated contact header

--- a/src/components/pages/Home/ContentSection.css
+++ b/src/components/pages/Home/ContentSection.css
@@ -5,8 +5,8 @@
   margin: auto;
   padding-left: 4.8rem;
   padding-right: 4.8rem;
-  padding-top: 24rem; 
-  padding-bottom: 24rem;  
+  padding-top: 14.4rem; 
+  padding-bottom: 14.4rem;  
   overflow: hidden;
 }
 
